2016-08-12 DariusIII
	* Chg: Move movie and tv UHD category check above webdl one
	* Chg: Update Smarty to version 3.1.30
2016-08-11 DariusIII
	* Chg: Update handling of SDPORN releases in NameFixer and groupfixrelnames
2016-08-09 DariusIII
	* Chg: Properly process SDPORN releases
2016-08-08 DariusIII
	* Chg: Change updating (ported from nZEDb)
	* Chg: Remove rss button from search page in Gamma theme.
2016-08-05 DariusIII
	* Chg: Update composer asset plugin
	* Fix: Fix cart operations in all themes
2016-08-04 DariusIII
	* Fix: Category display in Gamma theme browse page
	* Chg: Update git tag checking code
2016-08-02 DariusIII
	* Chg: Move user menu to headermenu.tpl
2016-08-01 DariusIII
	* Chg: Make themes more mobile devices friendly
	* Fix: Path to glyphicons in Gamma them
2016-07-30 DariusIII
	* Chg: Update rarinfo library
2016-07-29 DariusIII
	* Fix: Add check if the password is set in ProcessAdditional
	* Chg: Speed up queries in RequestIDWeb and groupfixrelnames by preventing usage of indexes on ORDER BY clause.
	* Chg: Allow underscore in usernames.
2016-07-28 DariusIII
	* Chg: Update sphinx.conf for new sphinx 2.2.11 release
		Note: if using sphinx search the following is required to update the index
		sudo service sphinxsearch stop
		sudo mv /etc/sphinxsearch/sphinx.conf /etc/sphinxsearch/sphinx.conf.1
		sudo cp /var/www/newznab/misc/sphinxsearch/sphinx.conf /etc/sphinxsearch/sphinx.conf
		sudo service sphinxsearch start
		php misc/sphinxsearch/populate_rt_indexes.php releases_rt
2016-07-27 DariusIII
	* Chg: Update groupfixrelnames query by not allowing it to use any index on ORDER BY r.id DESC clause (speeds up the query)
2016-07-26 DariusIII
	* Chg: Update composer with new version of jquery(3.1.0)  and use it in themes
	* Chg: Update getTVReleases query by not allowing it to use any index on ORDER BY postdate DESC clause (speeds up the query as it uses the right index now)