@@ -177,7 +177,7 @@ class NZB
 		$this->_nzbHeadString = (
 			"<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<!DOCTYPE nzb PUBLIC \"-//newzBin//DTD NZB 1.1//EN\" \"http://www.newzbin.com/DTD/nzb/nzb-1.1.dtd\">\n<!-- NZB Generated by: nntmux " .
 			$this->pdo->version() . ' ' . htmlspecialchars(date('F j, Y, g:i a O'), ENT_QUOTES, 'utf-8') .
-			" -->\n<nzb xmlns=\"http://www.newzbin.com/DTD/2003/nzb\">\n<head>\n <meta type=\"category\">%s</meta>\n <meta type=\"name\">%s</meta>\n</head>\n\n"
+			" -->\n<nzb xmlns=\"http://www.newzbin.com/DTD/2003/nzb\">\n<head>\n <meta type=\"category\">%s</meta>\n <meta type=\"name\">%s</meta>\n <meta type=\"x-rating-id\">%s</meta>\n</head>\n\n"
 		);
 	}
 
@@ -206,7 +206,8 @@ class NZB
 		$string = sprintf(
 			$this->_nzbHeadString,
 			htmlspecialchars($cTitle, ENT_QUOTES, 'utf-8'),
-			htmlspecialchars($name, ENT_QUOTES, 'utf-8')
+			htmlspecialchars($name, ENT_QUOTES, 'utf-8'),
+			$this->pdo->escapeString($relGuid)
 		);
 
 		foreach ($collections as $collection) {
