@@ -239,6 +239,7 @@ class Releases
 				df.failed AS failed,
 				rn.releases_id AS nfoid,
 				re.releases_id AS reid,
+				rt.video, rt.audio, rt.voteup, rt.votedown, rt.passworded, rt.spam,
 				v.tvdb, v.trakt, v.tvrage, v.tvmaze, v.imdb, v.tmdb,
 				tve.title, tve.firstaired
 			FROM releases r
@@ -249,6 +250,7 @@ class Releases
 			LEFT OUTER JOIN video_data re ON re.releases_id = r.id
 			LEFT OUTER JOIN release_nfos rn ON rn.releases_id = r.id
 			LEFT OUTER JOIN dnzb_failures df ON df.release_id = r.id
+			LEFT OUTER JOIN release_ratings rt ON rt.releases_id = r.id
 			WHERE r.id IN (%s)
 			ORDER BY %s %s",
 			(isset($releaseIDs) ? implode(',', $releaseIDs) : -1),
@@ -508,6 +510,7 @@ class Releases
 					%s AS category_ids,
 					groups.name AS group_name,
 					rn.id AS nfoid, re.releases_id AS reid,
+					rt.video, rt.audio, rt.voteup, rt.votedown, rt.passworded, rt.spam,
 					tve.firstaired,
 					(SELECT df.failed) AS failed
 				FROM releases r
@@ -518,6 +521,7 @@ class Releases
 				LEFT JOIN categories c ON c.id = r.categories_id
 				LEFT JOIN categories cp ON cp.id = c.parentid
 				LEFT OUTER JOIN dnzb_failures df ON df.release_id = r.id
+				LEFT OUTER JOIN release_ratings rt ON rt.releases_id = r.id
 				WHERE %s %s
 				AND r.nzbstatus = %d
 				AND r.categories_id BETWEEN " . Category::TV_ROOT . " AND " . Category::TV_OTHER . "
@@ -659,7 +663,7 @@ class Releases
 		// Delete from DB.
 		$this->pdo->queryExec(
 			sprintf('
-				DELETE r, rn, rc, uc, rf, ra, rs, rv, re, df
+				DELETE r, rn, rc, uc, rf, ra, rs, rv, re, df, rt
 				FROM releases r
 				LEFT OUTER JOIN release_nfos rn ON rn.releases_id = r.id
 				LEFT OUTER JOIN release_comments rc ON rc.releases_id = r.id
@@ -670,6 +674,7 @@ class Releases
 				LEFT OUTER JOIN video_data rv ON rv.releases_id = r.id
 				LEFT OUTER JOIN releaseextrafull re ON re.releases_id = r.id
 				LEFT OUTER JOIN dnzb_failures df ON df.release_id = r.id
+				LEFT OUTER JOIN release_ratings rt ON rt.releases_id = r.id
 				WHERE %s',
 				(isset($identifiers['i']) && $identifiers['i'] > 0
 					? "r.id = {$identifiers['i']}"
@@ -951,6 +956,7 @@ class Releases
 				rn.id AS nfoid,
 				re.releases_id AS reid,
 				cp.id AS categoryparentid,
+				rt.video, rt.audio, rt.voteup, rt.votedown, rt.passworded, rt.spam,
 				v.tvdb, v.trakt, v.tvrage, v.tvmaze, v.imdb, v.tmdb,
 				tve.firstaired
 			FROM releases r
@@ -962,6 +968,7 @@ class Releases
 			LEFT JOIN categories c ON c.id = r.categories_id
 			LEFT JOIN categories cp ON cp.id = c.parentid
 			LEFT OUTER JOIN dnzb_failures df ON df.release_id = r.id
+			LEFT OUTER JOIN release_ratings rt ON rt.releases_id = r.id
 			%s",
 			$this->getConcatenatedCategoryIDs(),
 			$whereSql
